--- a/Documentation/Dissertation/dissertation.bib
+++ b/Documentation/Dissertation/dissertation.bib
@@ -92,3 +92,10 @@
   note = {Accessed: 2017-03-24},
   author = {Scrum Alliance}
   }
+
+@article{jina2013javascript,
+  title={JavaScript Test Runner},
+  author={J{\'\i}na, Vojt{\v{e}}ch},
+  journal={examensarb., Czech Technical University in Prague},
+  year={2013}
+}
